@@ -240,6 +240,11 @@ class Client extends Client\Resource {
 		$request->sendsJson();
 		$request->expectsJson();
 		$request->addHeader('User-Agent', $this->identity);
+
+		$ip = $this->getClientIp();
+
+		if ($ip)
+			$request->addHeader('Client-IP', $ip);
 		
 		return $request;
 	}
@@ -357,5 +362,22 @@ class Client extends Client\Resource {
 		
 		if($this->descCallback)
 			call_user_func($this->descCallback, $this);
+	}
+
+	private function getClientIp() {
+		if (array_key_exists('HTTP_X_FORWARDED_FOR', $_SERVER)) {
+			$ips = array_values(array_filter(explode(',', $_SERVER['HTTP_X_FORWARDED_FOR'])));
+
+			return end($ips);
+
+		} else if (array_key_exists('REMOTE_ADDR', $_SERVER)) {
+			return $_SERVER["REMOTE_ADDR"];
+
+		} else if (array_key_exists('HTTP_CLIENT_IP', $_SERVER)) {
+			return $_SERVER["HTTP_CLIENT_IP"];
+
+		} else {
+			return false;
+		}
 	}
 }
